--- a/app/src/main/res/layout/skyscraper.xml
+++ b/app/src/main/res/layout/skyscraper.xml
@@ -12,7 +12,7 @@
             android:id="@+id/include3"
             layout="@layout/app_bar_back"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="53dp" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/AddPostButton"
