--- a/app/src/main/res/layout/skyscraper_goaldetails.xml
+++ b/app/src/main/res/layout/skyscraper_goaldetails.xml
@@ -24,18 +24,23 @@
             android:layout_width="match_parent"
             android:layout_height="53dp"
             app:layout_constraintTop_toTopOf="parent" />
-
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/include2"
+        app:layout_constraintVertical_bias="0.0"
+        >
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:clipToPadding="false"
             android:orientation="vertical"
             android:paddingStart="23dp"
-            android:paddingEnd="23dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/include2">
+            android:paddingEnd="23dp">
 
                 <TextView
                     android:id="@+id/datumText"
@@ -54,6 +59,7 @@
                     android:text="Titel:"
                     android:textSize="18dp"
                     android:textAlignment="center"
+                    android:layout_marginTop="15dp"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
                 <TextView
@@ -63,22 +69,15 @@
                     android:layout_weight="1"
                     android:text="Beschrijving"
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                    tools:layout_conversion_absoluteHeight="19dp"
-                    tools:layout_conversion_absoluteWidth="76dp"
-                    tools:layout_editor_absoluteX="139dp"
-                    tools:layout_editor_absoluteY="166dp"
+                 android:layout_marginTop="25dp"
                     android:textColor="@android:color/black"/>
 
-                <TextView
-                    android:id="@+id/beschrijvingText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="4"
-                    android:text="TextView"
-                    tools:layout_conversion_absoluteHeight="19dp"
-                    tools:layout_conversion_absoluteWidth="58dp"
-                    tools:layout_editor_absoluteX="215dp"
-                    tools:layout_editor_absoluteY="166dp" />
+            <TextView
+                android:id="@+id/beschrijvingText"
+                android:layout_width="match_parent"
+                android:layout_height="57dp"
+                android:layout_marginTop="10dp"
+                android:text="TextView" />
 
 
                 <TextView
@@ -87,36 +86,29 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Alle stappen:"
+                    android:layout_marginTop="10dp"
                     android:textColor="@android:color/black"
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
-                <ScrollView
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="316dp"
+                android:layout_weight="3">
+
+                <LinearLayout
+                    android:id="@+id/stepList"
                     android:layout_width="match_parent"
-                    android:layout_height="107dp"
-                    android:layout_weight="3">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
-                    <LinearLayout
-                        android:id="@+id/stepList"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <!--<TextView
-                            android:id="@+id/stap"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="" />-->
-
-                    </LinearLayout>
-                </ScrollView>
-
-
+                </LinearLayout>
+            </ScrollView>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:layout_marginTop="10dp"
                 android:gravity="center_horizontal|center_vertical"
                 android:orientation="horizontal">
 
@@ -142,9 +134,8 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="4dp"
                     android:layout_weight="1"
-                    android:text="Delen"
+                    android:text="@{goalShared ? `Delen stoppen` : `Delen`}"
                     />
-                <!-- android:text="@{goalShared? View.GONE : View.VISIBLE"}" -->
                 <Button
                     android:id="@+id/btnVerwijder"
                     android:layout_width="wrap_content"
@@ -156,6 +147,6 @@
             </LinearLayout>
 
         </LinearLayout>
-
+    </ScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
