--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -159,10 +159,12 @@
         tools:layout="@layout/skyscraper">
         <action
             android:id="@+id/action_skyscraperFragment_to_addGoalFragment"
-            app:destination="@id/addGoalFragment" />
+            app:destination="@id/addGoalFragment"
+            app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_skyscraperFragment_to_goalDetailsFragment"
-            app:destination="@id/goalDetailsFragment" />
+            app:destination="@id/goalDetailsFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/treasureChestFragment"
