--- a/app/src/main/res/drawable/ic_avatar_female.xml
+++ b/app/src/main/res/drawable/ic_avatar_female.xml
@@ -7,41 +7,20 @@
       android:name="Hair"
       android:id="@+id/test"
       android:pathData="M117.85,11.85C97,-21 45.59,21.47 44.65,54.08s43.88,67.34 7,80.72c53,7.27 96.67,2.81 96.67,2.81 -24.87,-15.72 4.92,-32.38 3,-66.16S145.54,16.31 117.85,11.85Z"
-      android:fillColor="#EEEE94"/>
+      android:fillColor="@color/Hair"/>
   <path
       android:name="Skin"
       android:pathData="M100.07,153.37l0,-44.79 -16,-0.14c-1.87,25.21 -15.93,24.34 -43.67,32.22s-18.37,40.47 -21.3,57.66 -13.34,57.51 -8.63,79.26l21.13,-27.32c0.48,-30.15 13.63,-43.21 13.63,-43.21 4,22.26 9.87,23.66 11.2,42s9.07,38.59 -16,83.39 12,156.36 10.4,176.92 -11.2,61.42 1.87,116.92 8,69.86 8,69.86h23.2c-9.33,-16.62 -0.53,-64.79 4.27,-86.2s-4.8,-59.45 -5.07,-76.07 19.46,-87.33 14.4,-113.25 2.66,-22.82 2.66,-22.82"
-      android:fillColor="#F9B77D"/>
+      android:fillColor="@color/Skin"/>
   <path
       android:name="Skin"
       android:pathData="M83.83,108.51C82,133.72 68.34,133.13 40.61,141S22.13,181.2 19.2,198.39 12.27,255.3 8.27,272.48 0,373.36 0,373.36H16.23s-0.76,-15.51 4.84,-30.16 21.6,-59.45 21.06,-89.59 3.2,-46.49 3.2,-46.49c4,22.26 9.87,23.67 11.2,42"
-      android:fillColor="#F9B77D"/>
+      android:fillColor="@color/Skin"/>
   <path
       android:name="Skin"
       android:pathData="M100.07,153.37l0,-44.79 16,-0.14c1.87,25.21 15.49,24.62 43.22,32.51s18.47,40.18 21.41,57.37 6.93,56.9 10.93,74.09 7.92,100.87 7.92,100.87H183s1.5,-15.51 -4.1,-30.16 -21.6,-59.44 -21.07,-89.59 -3.2,-46.48 -3.2,-46.48c-4,22.26 -9.86,23.66 -11.2,42s-9.06,38.59 16,83.39 -12,156.36 -10.4,176.92 11.2,61.42 -1.86,116.92 -8,69.86 -8,69.86h-23.2c9.33,-16.62 0.53,-64.79 -4.27,-86.2s4.8,-59.45 5.07,-76.07 -19.47,-87.33 -14.4,-113.25 -2.14,-22.82 -2.14,-22.82"
-      android:fillColor="#F9B77D"/>
-  <path
-      android:pathData="M40.45,332.42c-25.06,44.79 6.65,156.36 5,176.92s-3,60.73 6.66,116.92c9.51,55.23 8.56,69.86 8.56,69.86h23.2c-3.94,-18 -0.28,-63.08 4.27,-86.2 4.23,-21.53 -1.42,-59.45 -1.69,-76.07s14.45,-87 11.86,-113.25c-2.41,-24.45 -0.63,-24.84 1.82,-22.82l-0.05,-61.09"
-      android:fillColor="#1a1a1a"/>
-  <path
-      android:pathData="M159.53,332.42c25.06,44.79 -6.65,156.36 -5.05,176.92s3,60.73 -6.66,116.92c-9.51,55.23 -8.56,69.86 -8.56,69.86h-23.2c3.94,-18 0.28,-63.08 -4.27,-86.2 -4.23,-21.53 1.42,-59.45 1.69,-76.07S98.85,471.32 101.62,420.6c1.44,-26.44 -1.83,-22.82 -1.83,-22.82l0.06,-61.09"
-      android:fillColor="#1a1a1a"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="M154.27,214.39C139.1,249.33 108,222.56 98.62,222S58.5,241.14 46,219.46l3.14,38.6S81.38,232.42 98,232.42 141.4,250.74 134.09,280s21.83,45 21.33,121.12 34.93,-8.72 34.93,-8.72Z"
-      android:strokeAlpha="0.05"
-      android:fillAlpha="0.05"/>
-  <path
-      android:pathData="M199.55,373.28 L183,373.15c-0.79,6 -10.09,11.83 -10.66,25.53a140,140 0,0 1,-2.83 23.47c5.24,-0.69 8.1,-8.86 7.78,-12.43s-0.35,-8.64 1.79,-8.38 2.5,17.51 -1.95,20.67 -8.88,6.08 -8.63,8.49 27.78,1.5 29.67,-23.15S198,386.58 199.55,373.28Z"
-      android:fillColor="#fbc9c9"/>
-  <path
-      android:pathData="M197.68,411.29c-4.34,20.81 -28.88,21.49 -29.11,19.22 -0.26,-2.42 4.17,-5.32 8.62,-8.49 1.42,-1 2.34,-3.43 2.88,-6.28C187.17,416.39 197.68,411.29 197.68,411.29Z"
-      android:strokeAlpha="0.1"
-      android:fillColor="#ff4554"
-      android:fillAlpha="0.1"/>
-  <path
-      android:pathData="M96.71,85.47l-1.97,5.36l1.97,0"
-      android:fillColor="#9f4f4f"/>
+      android:fillColor="@color/Skin"/>
+
   <path
       android:fillColor="#FF000000"
       android:pathData="M99.81,120.13c8.17,0 31,-20.57 32.68,-27s8.17,-42 2,-50.71 -64.8,-8.17 -69.59,0 -0.12,46.28 3.95,52.68C72.76,101.25 91.36,120.13 99.81,120.13Z"
@@ -50,7 +29,7 @@
   <path
       android:name="Skin"
       android:pathData="M99.81,118.16c8.17,0 31,-20.57 32.68,-27s8.17,-42 2,-50.71 -64.8,-8.17 -69.59,0 -0.12,46.28 3.95,52.68C72.76,99.28 91.36,118.16 99.81,118.16Z"
-      android:fillColor="#F9B77D"/>
+      android:fillColor="@color/Skin"/>
   <group>
     <clip-path
         android:pathData="M99.81,118.16c8.17,0 31,-20.57 32.68,-27s8.17,-42 2,-50.71 -64.8,-8.17 -69.59,0 -0.12,46.28 3.95,52.68C72.76,99.28 91.36,118.16 99.81,118.16Z"/>
@@ -62,21 +41,13 @@
         android:strokeWidth="3.66"
         android:fillColor="#00000000"
         android:strokeColor="#6ecdf5"/>
-    <path
-        android:pathData="M66.56,89.15 L68.25,89"
-        android:strokeWidth="0.28"
-        android:fillColor="#00000000"
-        android:strokeColor="#2a5197"/>
+
     <path
         android:pathData="M71.73,88.71c20.67,-2.18 23.44,-7.8 28.61,-7.8s6.87,8 29.66,8.48"
         android:strokeWidth="0.28"
         android:fillColor="#00000000"
         android:strokeColor="#2a5197"/>
-    <path
-        android:pathData="M131.75,89.41h1.69"
-        android:strokeWidth="0.28"
-        android:fillColor="#00000000"
-        android:strokeColor="#2a5197"/>
+
     <path
         android:pathData="M76.71,93.91c17.71,-0.91 19.65,-4.38 23.54,-4.38s4.89,4.65 23.06,4.51"
         android:strokeAlpha="0.6"
@@ -116,7 +87,7 @@
     <path
         android:name="Eye"
         android:pathData="M116.55,74.83m-4.23,0a4.23,4.23 0,1 1,8.46 0a4.23,4.23 0,1 1,-8.46 0"
-        android:fillColor="#2D02EB"/>
+        android:fillColor="@color/Eye"/>
   </group>
   <path
       android:fillColor="#FF000000"
@@ -135,7 +106,7 @@
     <path
         android:name="Eye"
         android:pathData="M81.93,74.83m-4.23,0a4.23,4.23 0,1 1,8.46 0a4.23,4.23 0,1 1,-8.46 0"
-        android:fillColor="#2D02EB"/>
+        android:fillColor="@color/Eye"/>
   </group>
   <path
       android:fillColor="#FF000000"
@@ -146,18 +117,9 @@
   <path
       android:name="Hair"
       android:pathData="M60.63,36.16c-8.34,28.65 7.69,47 10.26,48.31 -3.21,-6.62 -2.58,-19.21 -0.44,-22 0.21,8.55 4.06,16 5.34,16.68C74.08,70 71.53,59 89.27,50.7s26.09,-14.54 26.09,-14.54c0,4.06 21.8,7.91 16,48.31C137.8,61.81 141.32,42 141.32,42L118.56,27.4Z"
-      android:fillColor="#EEEE94"/>
+      android:fillColor="@color/Hair"/>
   <path
       android:name="Body"
       android:pathData="M43,322.75c9,-26.4 1.39,-113 1.39,-113s0.14,42.41 -3,63 -24.16,81.58 -24.16,81.58H0.42s3,-46.08 4.3,-61.32 14.14,-100.55 13.4,-127.17 37.65,-31.7 50.61,-33.39c6.74,-0.88 19,0.67 30.58,1.3 11.62,-0.63 24.29,-2.16 31,-1.29 13,1.69 51.36,6.78 50.61,33.4S193,277.73 194.36,293s4.29,61.31 4.29,61.31H181.84s-21.07,-61 -24.17,-81.58 -3,-63 -3,-63S149,295.93 158,322.33c11.18,32.73 14.28,53.53 12.33,86.44 -43,-3.19 -67.31,-8.85 -69.91,-8.75h-0.24c-2.66,-0.1 -27.66,-0.93 -70.75,2.27C27.76,373.83 32.73,347.94 43,322.75Z"
-      android:fillColor="#FF0400"/>
-  <group>
-    <clip-path
-        android:pathData="M43,322.75c9,-26.4 1.39,-113 1.39,-113s0.14,42.41 -3,63 -24.16,81.58 -24.16,81.58H0.42s3,-46.08 4.3,-61.32 14.14,-100.55 13.4,-127.17 37.65,-31.7 50.61,-33.39c6.74,-0.88 19,0.67 30.58,1.3 11.62,-0.63 24.29,-2.16 31,-1.29 13,1.69 51.36,6.78 50.61,33.4S193,277.73 194.36,293s4.29,61.31 4.29,61.31H181.84s-21.07,-61 -24.17,-81.58 -3,-63 -3,-63S149,295.93 158,322.33c11.18,32.73 14.28,53.53 12.33,86.44 -43,-3.19 -67.31,-8.85 -69.91,-8.75h-0.24c-2.66,-0.1 -27.66,-0.93 -70.75,2.27C27.76,373.83 32.73,347.94 43,322.75Z"/>
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M154.69,210.07c-15.18,35 -46.19,6.08 -55.53,5.51s-42.06,19.16 -54.63,-2.53l3.14,38.63S81.9,226 98.56,226s41.51,18.33 34.19,47.65 21.85,45.1 21.35,121.24 35,-8.72 35,-8.72Z"
-        android:strokeAlpha="0.04"
-        android:fillAlpha="0.04"/>
-  </group>
+      android:fillColor="@color/Body"/>
 </vector>
